--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,8 +7,13 @@
 
     <dimen name="input_height">56dp</dimen>
     <dimen name="activity_padding">16dp</dimen>
-    <dimen name="card_corner_radius">4dp</dimen>
 
+    <dimen name="card_corner_radius">4dp</dimen>
+    <dimen name="card_shadow">4dp</dimen>
+    <dimen name="card_padding">8dp</dimen>
+    <dimen name="card_field_margins">8dp</dimen>
+    <dimen name="card_amount_max_width">100dp</dimen>
+    <!-- Font sizes -->
     <dimen name="text_extra_large">20sp</dimen>
     <dimen name="text_large">16sp</dimen>
     <dimen name="text_medium">14sp</dimen>
