--- a/app/src/main/res/layout/currency_card_view.xml
+++ b/app/src/main/res/layout/currency_card_view.xml
@@ -86,6 +86,7 @@
                 android:id="@+id/amountLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/card_field_margins"
                 android:layout_marginTop="@dimen/card_field_margins"
                 android:layout_marginBottom="@dimen/card_field_margins"
                 android:labelFor="@id/amount"
