Implemented adapter and modified view model to contain only strings.

--- a/app/src/main/res/layout/currency_card_view.xml
+++ b/app/src/main/res/layout/currency_card_view.xml
@@ -29,8 +29,8 @@
                 android:id="@+id/flag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="@dimen/card_field_margins"
+                android:layout_marginTop="@dimen/card_field_margins"
                 android:src="@drawable/bgn"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -39,8 +39,8 @@
                 android:id="@+id/shortName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="@dimen/card_field_margins"
+                android:layout_marginTop="@dimen/card_field_margins"
                 android:text="@string/bgn_short"
                 android:textSize="@dimen/text_medium"
                 app:layout_constraintStart_toEndOf="@+id/flag"
