--- a/app/src/main/res/layout/currency_card_view.xml
+++ b/app/src/main/res/layout/currency_card_view.xml
@@ -44,7 +44,7 @@
                 android:text="@string/bgn_short"
                 android:textSize="@dimen/text_medium"
                 app:layout_constraintStart_toEndOf="@+id/flag"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintBottom_toBottomOf="@+id/flag" />
 
             <TextView
                 android:id="@+id/longName"
@@ -56,7 +56,7 @@
                 android:text="@string/bgn_long"
                 android:textSize="@dimen/text_small"
                 app:layout_constraintStart_toEndOf="@+id/shortName"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintBottom_toBottomOf="@+id/shortName" />
 
             <!--Second line-->
             <TextView
@@ -65,7 +65,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/card_field_margins"
                 android:layout_marginTop="@dimen/card_field_margins"
-                android:labelFor="@id/exchangeRate"
+                android:labelFor="@+id/exchangeRate"
                 android:text="@string/exchange_rate_label"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/flag" />
@@ -102,7 +102,7 @@
                 android:layout_marginStart="@dimen/card_field_margins"
                 android:layout_marginTop="@dimen/card_field_margins"
                 android:layout_marginEnd="@dimen/card_field_margins"
-                android:text="3123123123123123123123123123123232232231231.52"
+                android:text="23232323232323232.52"
                 android:maxWidth="@dimen/card_amount_max_width"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/amountLabel"
