--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,9 +9,12 @@
     <dimen name="activity_padding">16dp</dimen>
 
     <dimen name="card_corner_radius">4dp</dimen>
-    <dimen name="card_shadow">4dp</dimen>
+    <dimen name="card_shadow">8dp</dimen>
     <dimen name="card_padding">16dp</dimen>
     <dimen name="card_field_margins">16dp</dimen>
+    <dimen name="card_external_padding">4dp</dimen>
+    <dimen name="card_horizontal_margin">8dp</dimen>
+
     <dimen name="card_amount_max_width">100dp</dimen>
     <!-- Font sizes -->
     <dimen name="text_extra_large">20sp</dimen>
