--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:indeterminateOnly="false"
+        android:indeterminateOnly="true"
         android:maxHeight="10dip"
         android:minHeight="10dip"/>
 
