--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,7 +7,7 @@
 
     <dimen name="input_height">56dp</dimen>
     <dimen name="activity_padding">16dp</dimen>
-
+    <dimen name="activity_second_level_margin">8dp</dimen>
     <dimen name="card_corner_radius">4dp</dimen>
     <dimen name="card_shadow">8dp</dimen>
     <dimen name="card_padding">16dp</dimen>
