Added calculation of amounts and fixed ui constraints issue with card view

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     android:focusableInTouchMode="true">
 
     <EditText
-        android:id="@+id/amount"
+        android:id="@+id/amountView"
         android:layout_width="match_parent"
         android:layout_height="@dimen/input_height"
         android:digits="0123456789."
