modified package structure, aligning a bit better to clean architecture standard (not final)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.petrovdevelopment.paytmcurrencyconverter.platform.views.MainActivity"
+    tools:context="com.petrovdevelopment.paytmcurrencyconverter.platform.ui.views.MainActivity"
     android:background="@color/yellow_light"
     android:padding="@dimen/activity_padding"
     android:focusable="true"
