--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.petrovdevelopment.paytmcurrencyconverter.platform.ui.views.MainActivity"
-    android:background="@color/yellow_light"
+    android:background="@color/beige"
     android:padding="@dimen/activity_padding"
     android:focusable="true"
+
     android:focusableInTouchMode="true">
 
     <EditText
