--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,8 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Material.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:statusBarColor">@color/very_dark_blue</item>
+        <item name="android:colorPrimary">@color/very_dark_blue</item>
     </style>
 
 </resources>
