--- a/app/src/main/res/layout/currency_spinner_view.xml
+++ b/app/src/main/res/layout/currency_spinner_view.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/bgn"
+        android:contentDescription="@string/flag"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
