Removed a few warnings

--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,7 +2,7 @@
 <network-security-config>
     <debug-overrides>
         <trust-anchors>
-            <!-- Trust user added CAs while debuggable only -->
+            <!-- Trust user added CAs while debuggable only. This is useful for our Charles proxy networking testing  -->
             <certificates src="user" />
         </trust-anchors>
     </debug-overrides>
